Refactored Effect w Redis
